--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,9 @@
     <string name="no_offers">You haven\'t made any offers yet</string>
     <string name="no_purchases">You haven\'t made any purchases yet</string>
 
+    <!-- Seller History -->
+    <string name="no_sales">You haven\'t made any sales yet</string>
+
     <!-- Item Detail Strings -->
     <string name="error_item_not_found">Error: Item not found</string>
     <string name="condition_format">Condition: %1$s</string>
@@ -41,12 +44,52 @@
     <string name="error_loading_user">Could not load user data</string>
     <string name="profile_update_success">Profile updated successfully</string>
     <string name="error_empty_display_name">Display name cannot be empty</string>
+    <string name="error_update_display_name">Failed to update display name</string>
     <string name="permission_required">Storage permission is required to select images</string>
     <string name="location_not_implemented_title">Location Picker</string>
     <string name="location_not_implemented_message">Location picker functionality is not implemented yet.</string>
     <string name="ok">OK</string>
     <string name="error_session_expired">Your session has expired. Please sign in again.</string>
-    <string name="error_update_display_name">Failed to update display name</string>
+
+    <!-- Profile Screen Strings -->
+    <string name="profile">Profile</string>
+    <string name="items">Items</string>
+    <string name="reviews">Reviews</string>
+    <string name="rating">Rating</string>
+    <string name="my_listings">My Listings</string>
+    <string name="account">Account</string>
+    <string name="edit_profile">Edit Profile</string>
+    <string name="payment_methods">Payment Methods</string>
+    <string name="shipping_addresses">Shipping Addresses</string>
+    <string name="settings">Settings</string>
+    <string name="notifications">Notifications</string>
+    <string name="privacy_security">Privacy &amp; Security</string>
+    <string name="help_support">Help &amp; Support</string>
+    <string name="sign_out">Sign Out</string>
+
+    <!-- Bio and Contact Info Strings -->
+    <string name="about_me">About Me</string>
+    <string name="no_bio_added">No bio added yet. Tell others about yourself!</string>
+    <string name="contact_info">Contact Information</string>
+    <string name="preferred_contact">Preferred contact method:</string>
+
+    <!-- Content Descriptions -->
+    <string name="star_rating">Star rating</string>
+    <string name="inventory_icon">Inventory icon</string>
+    <string name="shopping_bag_icon">Shopping bag icon</string>
+    <string name="expand_menu">Expand menu</string>
+    <string name="edit_icon">Edit icon</string>
+    <string name="payment_icon">Payment icon</string>
+    <string name="location_icon">Location icon</string>
+    <string name="notification_icon">Notification icon</string>
+    <string name="security_icon">Security icon</string>
+    <string name="help_icon">Help icon</string>
+    <string name="bio_description">User bio icon</string>
+    <string name="contact_description">Contact information icon</string>
+    <string name="location_description">Location icon</string>
+    <string name="phone_description">Phone icon</string>
+    <string name="email_description">Email icon</string>
+    <string name="preferred_contact_description">Preferred contact method icon</string>
 
     <!-- Font families for typography -->
     <string name="font_family_display">sans-serif</string>
@@ -62,4 +105,6 @@
         <item>Resolved</item>
         <item>Dismissed</item>
     </string-array>
+
+    <string name="default_web_client_id">966394665760-gm155jae9t4un91h9fe334u9reat2c9m.apps.googleusercontent.com</string>
 </resources>
