Add offer management for sellers with offer history UI, adapter, and session helpers
- Implement OfferHistoryFragment to display offers received by sellers
- Add OfferAdapter and item_offer.xml for offer list UI and actions
- Extend FirebaseService with offer-related queries and listing/item fetch by IDs
- Add UserSession and UserPrefsHelper for user session and auto-login support
- Update login, logout, and AuthActivity to use session helpers and auto-login
- Enhance ListingDetailFragment with owner/buyer action buttons and status display
- Update home and recommendations to filter out user's own and unavailable listings
- Add offer section to My Store UI and new string resources for offers

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -147,5 +147,6 @@
     <string name="sold">Sold</string>
     <string name="views">Views</string>
     <string name="saves">Saves</string>
-    <string name="shares">Shares</string>
+    <string name="shares">Shares</string><string name="view_offers">View Offers</string>
+    <string name="update_listing">Update Listing</string>
 </resources>
