Add purchase & offer history UI with tabbed navigation, cart model/services, and cart integration
- Implement PurchaseOfferHistoryFragment with tabbed Offer and Purchase history
- Add OfferHistoryFragment and PurchaseHistoryFragment with empty state UI
- Create PurchaseOfferHistoryPagerAdapter for ViewPager2 tab navigation
- Update navigation graph and profile to support new history flow
- Add Cart, CartItem models and CartService for cart management
- Integrate add-to-cart logic in ListingDetailFragment
- Add CartListAdapter and CartDisplayItem for cart UI
- Refactor FAB logic: move cart FAB to home, update RecommendationsFragment
- Update item_cart.xml and cart fragment for improved cart display
- Extend ItemRepository and FirebaseService for listing and transaction queries
- Update TransactionModel for new transaction fields and refactor
- Add new strings and update layouts for improved UX

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -149,4 +149,9 @@
     <string name="saves">Saves</string>
     <string name="shares">Shares</string><string name="view_offers">View Offers</string>
     <string name="update_listing">Update Listing</string>
+
+    <!-- Purchase History Strings -->
+    <string name="purchased_on">Purchased on %1$s</string>
+    <string name="status_completed">Completed</string>
+    <string name="unknown_item">Unknown Item</string>
 </resources>
